--- a/less/market-page.less
+++ b/less/market-page.less
@@ -137,11 +137,15 @@
     h5 {
       display:none;
     }
-  }
+    @media @tablet2 {
+      padding:100px;
+    }
     @media @mobile {
       padding:0px 100px 100px 100px;
+      margin-top: 62px;
     }
 }
+  }
 
   .card-body{
     @media @tablet {
